--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-multi": "^0.1.12",
     "redux-promise": "^0.5.3",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
