--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.1"
   }
 }
